# Autowave

./: README.md  pyproject.toml
AutoWave/: __init__.py  classifier.py  zero_shot.py
AutoWave/data/: augmentation.py  dataset.py  loader.py
AutoWave/models/: base.py  registry.py  transformer.py
AutoWave/training/: trainer.py
AutoWave/utils/: audio.py  export.py
AutoWave/visualization/: plots.py
examples/: basic_classification.py  zero_shot_example.py
tests/: test_augmentation.py  test_classifier.py  test_data_loader.py
